@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.sakaiproject.purepoms</groupId>
-        <artifactId>sakai-standard-tool</artifactId>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>master</artifactId>
         <version>2.9-SNAPSHOT</version>
         <!-- for 2.8 -->
         <!--
@@ -47,10 +47,9 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
+                <!-- Versions for these are inherited from master -->
                 <sakai.mailarchive.groupId>org.sakaiproject.mailarchive</sakai.mailarchive.groupId>
-                <sakai.mailarchive.version>2.9-SNAPSHOT</sakai.mailarchive.version>
                 <sakai.message.groupId>org.sakaiproject.message</sakai.message.groupId>
-                <sakai.message.version>2.9-SNAPSHOT</sakai.message.version>
                 <sakairsf.sakai.version>2.2.x</sakairsf.sakai.version>
                 <rsfutil.version>0.7.4</rsfutil.version>
                 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
@@ -157,69 +156,6 @@
         </site>
     </distributionManagement>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>Sakai Plugin Repo</id>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>maven2-central-repo</id>
-            <name>Maven2 Central Repo</name>
-            <url>http://repo1.maven.org/maven2/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <repositories>
-        <repository>
-            <id>sakai-maven</id>
-            <name>Sakai Maven Repo</name>
-            <layout>default</layout>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>sakai-maven2-snapshots</id>
-            <name>Sakai Maven Repo</name>
-            <layout>default</layout>
-            <url>http://source.sakaiproject.org/maven2-snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>default</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
 <!--
     <dependencies>
         <dependency>
@@ -244,18 +180,6 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>mailsender-impl</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${sakai.mailarchive.groupId}</groupId>
-                <artifactId>sakai-mailarchive-api</artifactId>
-                <version>${sakai.mailarchive.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>${sakai.message.groupId}</groupId>
-                <artifactId>sakai-message-api</artifactId>
-                <version>${sakai.message.version}</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>commons-logging</groupId>
@@ -308,24 +232,4 @@
         </dependencies>
     </dependencyManagement>
 
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <debug>true</debug>
-                    <links>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <aggregate>true</aggregate>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
